cmake_minimum_required(VERSION 2.8)

project(video_transform_micro_server)
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_C_FLAGS "-Wall -Wno-unused-variable -std=c99")
set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -Wno-unused-variable")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS} -O0 -g")
set(CMAKE_C_FLAGE_RELEASE "${CMAKE_C_FLAGS} -O3 -Wall")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -O0 -g")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -O3 -Wall")
# add_compile_options(-std=c++11 -Wall -Wno-unused-variable)

set(spdlog_DIR /usr/local/spdlog/lib/spdlog/cmake)
set(Poco_DIR /usr/local/poco/lib/cmake/Poco)
set(cpprestsdk_DIR /usr/local/cpprest-sdk/lib/cpprestsdk)
find_package(cpprestsdk REQUIRED)
find_package(spdlog REQUIRED)
find_package(Poco REQUIRED Foundation Util Net)

find_package(PkgConfig REQUIRED)
pkg_check_modules(PC_AVFORMAT REQUIRED libavformat)
pkg_check_modules(PC_AVUTIL REQUIRED libavutil)
pkg_check_modules(PC_AVCODEC REQUIRED libavcodec)
find_path(AVFORMAT_INCLUDE_DIR libavformat/avformat.h HINTS ${PC_AVFORMATINCLUDEDIR} ${PC_AVFORMAT_INCLUDE_DIRS})
find_library(AVFORMAT_LIBRARY avformat HINTS ${PC_AVFORMAT_LIBDIR} ${PC_AVFORMAT_LIBRARY_DIRS})
find_path(AVUTIL_INCLUDE_DIR libavutil/avutil.h HINTS ${PC_AVUTIL_INCLUDEDIR} ${PC_AVUTIL_INCLUDE_DIRS})
find_library(AVUTIL_LIBRARY avutil HINTS ${PC_AVUTIL_LIBDIR} ${PC_AVUTIL_LIBRARY_DIRS})
find_library(AVCODEC_LIBRAR avcodec HINTS ${PC_AVCODEC_LIBDIR} ${PC_AVCODEC_LIBRARY_DIRS})
message(${AVFORMAT_LIBRARY})
message(${AVUTIL_LIBRARY})
message(${AVCODEC_LIBRAR})
include_directories(${AVFORMAT_INCLUDE_DIR} ${AVUTIL_INCLUDE_DIR})

aux_source_directory(. SRCS)
add_executable(${PROJECT_NAME} ${SRCS})
target_link_libraries(${PROJECT_NAME} spdlog::spdlog_header_only cpprestsdk::cpprest boost_system ssl crypto ${Poco_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${AVFORMAT_LIBRARY} ${AVUTIL_LIBRARY} ${AVCODEC_LIBRAR})
